# duplex-multiqc

./: .gitignore  README.md  pyproject.toml
duplex_multiqc/: custom_code.py
duplex_multiqc/modules/duplex_seq/: __init__.py  duplex_seq.py
duplex_multiqc/modules/test_module/: test_module.py
multiqc_data/: multiqc_data.json  multiqc_report.html
tests/: NanoMB1Rep1_test_10k.csv  NanoMB2Rep1_test_10k.csv  pyproject.toml  sampledata.tsv  test.csv  test_plugin.py
wehi_multiqc_plugin/: custom_code.py
wehi_multiqc_plugin/modules/test_module/: __init__.py  test_module.py
