[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wehi_multiqc_plugin"
version = "0.1"
description = "A MultiQC plugin for parsing TestModule logs"
dependencies = [
    "multiqc", "pyyaml"
]
requires-python = ">=3.8"
readme = "README.md"
keywords = ["bioinformatics", "biology", "sequencing", "NGS", "next generation sequencing", "quality control"]

[tool.setuptools]
packages = ["wehi_multiqc_plugin"]

[project.entry-points."multiqc.modules.v1"]
test_module = "wehi_multiqc_plugin.modules.test_module:MultiqcModule"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "wehi_multiqc_plugin.custom_code:execute"

